--- a/.project
+++ b/.project
@@ -37,6 +37,16 @@
 			<location>C:/Users/przem/Downloads/slf4j-1.7.25/slf4j-1.7.25/slf4j-simple-1.7.25.jar</location>
 		</link>
 		<link>
+			<name>src/application/resources/addToken.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/addToken.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/removeToken.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/removeToken.png</location>
+		</link>
+		<link>
 			<name>src/application/resources/yellowbulb.jpg</name>
 			<type>1</type>
 			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/yellowbulb.jpg</location>
