--- a/.project
+++ b/.project
@@ -47,6 +47,51 @@
 			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/removeToken.png</location>
 		</link>
 		<link>
+			<name>src/application/resources/token_1.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_1.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_2.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_2.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_3.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_3.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_4.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_4.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_5.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_5.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_6.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_6.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_7.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_7.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_8.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_8.png</location>
+		</link>
+		<link>
+			<name>src/application/resources/token_9.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_9.png</location>
+		</link>
+		<link>
 			<name>src/application/resources/yellowbulb.jpg</name>
 			<type>1</type>
 			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/yellowbulb.jpg</location>
