Zmiany - nie dalo sie otwierac obrazkow z innej klasy...

--- a/.project
+++ b/.project
@@ -37,6 +37,51 @@
 			<location>C:/Users/przem/Downloads/slf4j-1.7.25/slf4j-1.7.25/slf4j-simple-1.7.25.jar</location>
 		</link>
 		<link>
+			<name>src/tokens/token_1.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_1.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_2.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_2.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_3.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_3.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_4.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_4.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_5.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_5.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_6.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_6.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_7.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_7.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_8.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_8.png</location>
+		</link>
+		<link>
+			<name>src/tokens/token_9.png</name>
+			<type>1</type>
+			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/token_9.png</location>
+		</link>
+		<link>
 			<name>src/application/resources/addToken.png</name>
 			<type>1</type>
 			<location>D:/PrzemekWorkspace/MagisterkaBudzich/src/application/resources/addToken.png</location>
