--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="itext7-sign-7.0.4.jar"/>
 	<classpathentry kind="lib" path="slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="lib" path="slf4j-simple-1.7.25.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
