--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="lib" path="slf4j-simple-1.7.25.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/PrzemekWorkspace/MagisterkaBudzich/apt/apt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
