--- a/.classpath
+++ b/.classpath
@@ -4,20 +4,46 @@
 	<classpathentry kind="src" path="settings"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="mysql-connector-java-5.1.44-bin.jar"/>
-	<classpathentry kind="lib" path="itext7-barcodes-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-forms-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-hyph-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-io-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-kernel-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-layout-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-pdfa-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-pdftest-7.0.4.jar"/>
-	<classpathentry kind="lib" path="itext7-sign-7.0.4-sources.jar"/>
-	<classpathentry kind="lib" path="itext7-sign-7.0.4.jar"/>
-	<classpathentry kind="lib" path="slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="slf4j-simple-1.7.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-barcodes-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-forms-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-hyph-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-io-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-kernel-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-layout-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-pdfa-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-pdftest-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-sign-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext7-sign-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="slf4j-api-1.7.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="slf4j-simple-1.7.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-barcodes-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-barcodes-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-barcodes-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-font-asian-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-forms-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-forms-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-forms-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-hyph-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-io-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-io-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-io-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-kernel-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-kernel-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-kernel-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-layout-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-layout-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-layout-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-pdfa-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-pdfa-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-pdfa-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-pdftest-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-pdftest-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-pdftest-7.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-sign-7.0.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-sign-7.0.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itext/itext7-sign-7.0.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="D:/PrzemekWorkspace/MagisterkaBudzich/apt/apt.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/PrzemekWorkspace/MagisterkaBudzich/apt/apt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
